# fast_api_app

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  logging.conf  main.py  pyproject.toml  sample.env  tests.py
alembic/: env.py
alembic/versions/: 12f00cea1b55_migration_3.py  505bc84d6fb5_migration_1.py  552e816befd0_migration_4.py  554ead78c4e6_migration_1.py  626d7ed2111e_migration_11.py  642b62721e25_migration_1.py  712aa690e361_migration_1.py  8e650c385b4f_migration_2.py  94f39618bb87_migration_1.py  9c4cf22b2244_migration_1.py  a8400094a879_migration_2.py  b3a64f22c901_migration_3.py  b4f850194097_asd6.py  ca0a1fe68e1c_migration_1.py  ccba048477df_migration_1.py  d511b3e1730e_migration_2.py  d9e8dacd3180_migration_1.py  f3643c05d2df_migration_1.py  f719034207c3_migration_1.py
api_routers/: routers.py
db/: base.py  connection.py  models.py
endpoints/: analitycs.py  auth.py  companies_members.py  company.py  export.py  quiz.py  quiz_results.py  user.py
my_redis/: config.py  export.py
repositories/: analytics.py  companies_members.py  company.py  quiz.py  quiz_results.py  service.py  sql_queries.py  user.py
repositories/services/: analitycs_format.py  generic_database.py  log.py  nested_quiz_for_client.py  quiz_results.py  quiz_utils.py  redis_utils.py  (+1 more)
schemas/: analitycs.py  companies_members.py  company.py  export.py  generic.py  quiz.py  quiz_results.py  token.py  user.py
security/: auth.py  auth0.py
settings/: config.py
src/: main.py
src/db/: base.py  (+1 more)
utils/: exceptions.py  permissions.py
(+1 files in other folders)
