[tool.poetry]
name = "fast-api-app"
version = "0.1.0"
description = ""
authors = ["zxc_322 <kvasoliaeww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
